# swedish-climate-data

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
elevation/: fetch_elevations.py
output/: postcodes-enriched.json  weather_stations.json
smhi/: derive_normals.py  fetch_fake_observations.py  fetch_observations.py  fetch_stations.py  run_pipeline.py  types.py  validate.py
